ingress/scenarios/xenon-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: xenon-deployment
  namespace: xenon-app
  labels:
    app: nginx
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      component: frontend
  template:
    metadata:
      labels:
        app: nginx
        component: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-conf-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config-volume
        configMap:
          name: xenon-config
      - name: nginx-conf-volume
        configMap:
          name: xenon-config
          items:
          - key: nginx.conf
            path: nginx.conf
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: xenon-dataset-deployment
  namespace: xenon-app
  labels:
    app: nginx
    component: dataset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      component: dataset
  template:
    metadata:
      labels:
        app: nginx
        component: dataset
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-conf-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config-volume
        configMap:
          name: xenon-dataset-config
      - name: nginx-conf-volume
        configMap:
          name: xenon-dataset-config
          items:
          - key: nginx.conf
            path: nginx.conf

---

apiVersion: v1
kind: Service
metadata:
  name: xenon-service
  namespace: xenon-app
  labels:
    component: frontend
spec:
  selector:
    app: nginx
    component: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: xenon-dataset-service
  namespace: xenon-app
  labels:
    component: dataset
spec:
  selector:
    app: nginx
    component: datasets
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
